[package]
name = "rosso"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-net = "2.0.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
futures-lite = "2.6.0"
macro_rules_attribute = "0.2.0"
scc = "2.3.4"
smol = "2.0.2"
smol-macros = "0.1.1"

[dev-dependencies]
anyhow = "1.0.98"
redis = "0.30.0"
